# assess-code

./: CMakeLists.txt  LICENSE
src/: mostRecentObject.cpp  vehicle.cpp
tests/: mRO_test.cpp  vehicle_test.cpp
